--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
       excepturi dolor necessitatibus rem nemo consequuntur perspiciatis
       consequatur beatae assumenda odit?
     </p>
+    <a href="https://www.google.hr">Click me</a>
   </body>
 </html>
